2023-12-06  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha03: Sunrise Snatchers';git push
	git tag -a 5.2.0-alpha03 -m 'fxm';git push --tags

	* Assign NETCDF_ROOT in configure.eg instead of bashrc (fixes Chrysalis build)

	* configure.ac: Add *_INC diagnostics to trace mangling of CPPFLAGS

	* NCO 5.2.0-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha02: Lysanne-a-thon';git push
	git tag -a 5.2.0-alpha02 -m 'ncks: nco_chk_bnd(); ncremap: trfv2';git push --tags

	* ncks: nco_chk_???() print full-names only when variable or group is not at root level

	* ncks: Finish nco_chk_bnd()

2023-12-01  Charlie Zender  <zender@uci.edu>

	* ncks: nco_chk_bnd() stubs

	* ncremap: Give v3 algorithm names preference/precedence in listings, docs

	* Add ncoaave as legitimate map-type directly to nco_rgr.c

	* Compile by default with -UNCO_ABORT_ON_ERROR not -DNCO_ABORT_ON_ERROR

2023-11-30  Charlie Zender  <zender@uci.edu>

	* ncremap tweaks for new algorithm names, e.g., ncoaave, trfv2

	* NCO 5.2.0-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha01: Crown Princess';git push
	git tag -a 5.2.0-alpha01 -m 'Functionally identical to 5.1.9 (except ncremap, ncremap: support fv2, fix mbtr alg_typ=tempest, deprecate sprintf(); ncks doc chk_xtn)';git push --tags

	* ncremap implement alg_typ fv2, fvnp2

	* Correct wgt_opt_mbt for alg_typ=tempest to use order = se_np_nbr == 4 by default (since TR uses order=4)

2023-11-29  Charlie Zender  <zender@uci.edu>

	* Move ${DATA}/ne30/rgr/ne30_tst.nc to ${DATA}/ne30/raw/ne30_tst.nc

	* ncap2 deprecate more sprintf()'s, use snprintf() instead, to quiet Clang warnings

2023-11-09  Charlie Zender  <zender@uci.edu>

	* ncap2 deprecate sprintf(), use snprintf() instead, to quiet Clang warnings

	* Document ncks --chk_xtn

2023-11-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9 release procedure: